# ChaosMath

./: .gitignore  LICENSE  README.md  pyproject.toml
chaosmath/: __init__.py  cli.py  core.py  example.py  excuses.py
