[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chaosmath"
version = "0.1.0"
description = "Math functions that almost work"
authors = [{ name = "EazyFencer" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"

[project.scripts]
chaosmath = "chaosmath.cli:main"
